--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/purple_200"
+    android:background="#E1F5FE"
     android:layoutDirection="ltr">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#333333"        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,29 +19,12 @@
             android:layout_centerInParent="true"
 
             android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:background="@color/purple_200"
+            android:layout_weight="0.8"
+
             android:orientation="vertical"
-            android:padding="30dp">
+            >
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/player2_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Player2">
 
-                </TextView>
-                <TextView
-                    android:id="@+id/player2_rating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="9999">
-
-                </TextView>
-            </LinearLayout>
 
         </LinearLayout>
 
@@ -52,10 +36,36 @@
 
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
-            android:layout_weight="1"
+            android:layout_weight="1.4"
             android:orientation="vertical"
             android:padding="10dp">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp">
+                <TextView
+                    android:id="@+id/player2_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#FFFFFF"
+                    android:textSize="30sp"
+                    android:text="Player2">
+
+                </TextView>
+                <LinearLayout
+                    android:layout_width="5dp"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    android:id="@+id/player2_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:textColor="@color/green_100"
+                    android:text="9999">
+
+                </TextView>
+            </LinearLayout>
             <LinearLayout
                 android:id="@+id/row7"
                 android:layout_width="match_parent"
@@ -601,58 +611,54 @@
                     android:background="@color/white"
                     app:srcCompat="@drawable/rook_white" />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
+                <TextView
+                    android:id="@+id/player1_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="30sp"
+                    android:textColor="#FFFFFF"
+                    android:text="Player1">
 
+                </TextView>
+                <LinearLayout
+                    android:layout_width="5dp"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    android:id="@+id/player1_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/green_100"
+                    android:textSize="20sp"
+                    android:text="9999">
+
+                </TextView>
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_centerInParent="true"
 
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:background="@color/purple_200"
+            android:layout_weight="0.8"
+
             android:orientation="vertical"
-            android:padding="30dp">
-            <LinearLayout
+            >
+
+            <Button
+                android:id="@+id/resign_btn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/player1_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Player1">
-
-                </TextView>
-                <TextView
-                    android:id="@+id/player1_rating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="9999">
-
-                </TextView>
-               <Button
-                   android:id="@+id/back_button"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Back">
-
-               </Button>
-                <Button
-                    android:id="@+id/resign_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Resign"/>
-
-            </LinearLayout>
-
-
+                android:layout_height="wrap_content"
+                android:text="Resign" />
 
         </LinearLayout>
 
-    </LinearLayout>
-
-
+        </LinearLayout>
 
 </RelativeLayout>
