--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,4 +71,16 @@
         android:visibility="gone"
         android:layout_centerHorizontal="true"
         android:backgroundTint="#2196F3" />
+    <Button
+        android:id="@+id/btnChangePlayer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change player"
+        android:textColor="#FFEB3B"
+        android:textSize="20sp"
+        android:layout_below="@id/btnStatistics"
+        android:visibility="gone"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="#2196F3" />
 </RelativeLayout>
